Fixed a problem about alert
In the alert box, when a too long content , such as a long URL appeared in one line, the content inside will display out of the alert box.

--- a/assets/css/argon.css
+++ b/assets/css/argon.css
@@ -6601,6 +6601,8 @@ a.badge:focus
 
     border: .0625rem solid transparent;
     border-radius: .25rem;
+
+    overflow: scroll;
 }
 
 .alert-heading
